--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "nodemon": "nodemon app.js"
+        "nodemon": "nodemon app.js",
+        "start": "node app.js"
     },
     "keywords": [],
     "author": "",
